	MacOS-X implementation.  Implement concrete subclass of
	NSNotification.
	* Source/NSUserDefaults.m: Try to make creation of new defaults
	database an atomic operation.
	* Source/NSObject.m: Remove dealloc notifications hack ... the
	dealloc method can now safely be used to refrain from deallocating
	objects, so I don't think the hack is needed any more.

2002-07-29  Adam Fedor  <fedor@gnu.org>

	* Merge changes from 1.4.0 onto main branch.

2002-07-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSTcpHandle.m: Always use runloop in NSConnectionReplyMode
	to avoid other NSDefaultRunLoopMode events being triggered while
	executing a DO method.  **EXPERIMENTAL**

2002-07-27  Adam Fedor  <fedor@gnu.org>

	* Version: 1.4.0

2002-07-23  Adam Fedor  <fedor@gnu.org>

	* Source/NSInvocation.m ([GSFrameInvocation
	-initWithMethodSignature:]): Return nil if signature is nil.
	* Source/GSFFCallInvocation.m (-initWithMethodSignature:): Idem.
	* Source/GSFFIInvocation (-initWithMethodSignature:): Idem.
	
2002-07-20  Adam Fedor  <fedor@gnu.org>

	* Source/NSDecimal.m: ifdef for compiling on Darwin (report
	from Carl Eugen).
	* Source/NSInvocation.m ([-initWithSelector:): Rewrite to use
	designated initializer.
	(-initWithTarget:selector:): Idem.

2002-07-18  Adam Fedor  <fedor@gnu.org>

	* Tools/gdomap.c (main): Write the pidfile before switching away
	from root, but only if the user is root.

2002-07-17  Adam Fedor  <fedor@gnu.org>

	* Source/NSString.m (-getLineStart:end:contentsEnd:forRange:): Fix
	lineEnd and contentEnd check for \r\n (particularly at end of
	string.

Tue Jul 16 16:43:59 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/base/GSXML.h ([GSXMLNode -setNamespace:]): Added
	missing method essential to use namespaces.
	* Source/Additions/GSXML.m ([GSXMLNode -setNamespace:]): Implemented.
	
2002-07-08  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSFileManager.m: Don't standardise path before converting to